--- a/src/main/java/com/mycompany/hangmanprojectv1/Sudoku2.form
+++ b/src/main/java/com/mycompany/hangmanprojectv1/Sudoku2.form
@@ -1325,6 +1325,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Quit"/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="quit.setToolTipText(&quot;Quits game&quot;);&#xa;&#xa;quit.addActionListener(new java.awt.event.ActionListener() {&#xa;    public void actionPerformed(java.awt.event.ActionEvent evt)   {&#xa;        quitActionPerformed(evt);&#xa;}&#xa;});"/>
+      </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="520" y="320" width="-1" height="-1"/>
